force-app/main/default/objects/ConnectDepositOffsetBilling__c/ConnectDepositOffsetBilling__c.object-meta.xml
<CustomObject>
    <label>WMS Bill+Dep Offs</label>
    <nameField>
        <displayFormat>DB-{000000}</displayFormat>
        <label>CONNECT DEPOSIT OFFSET &amp; BILLING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill+Dep Offs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>