force-app/main/default/objects/ConnectDepositOffsetBilling__c/fields/DepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetID__c</fullName>
    <label>DEPOSIT OFFSET ID</label>
    <referenceTo>DepositOffset__c</referenceTo>
    <relationshipName>ConnectDepositOffsetBilling</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>