force-app/main/default/objects/ConnectDepositOffsetBilling__c/fields/UnpaidBalanceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSD__c</fullName>
    <formula>BillingID__r.UnpaidBalanceOfBuyingUSD__c</formula>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>